--- a/app/assets/stylesheets/questions/exhibit-btn.css
+++ b/app/assets/stylesheets/questions/exhibit-btn.css
@@ -1,22 +1,22 @@
 .purchase-btn {
+  display: inline-block;
   width: 120px;
-  background: #3ccace;
+  background: #ff0000;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #b60808;
   text-align: center;
-  border-radius: 4%;
+  border-radius: 10px;
   bottom: 32px;
   right: 32px;
   position: fixed;
   padding: 15px;
-}
-
-.purchase-btn-text {
-  color: #fff;
-  display: block;
   font-size: 18px;
-  text-decoration: none;
-  margin-bottom: 5px;
+  color: #fff;
 }
 
-.purchase-btn-icon {
-  width: 60%;
+.purchase-btn:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: none;
 }
