--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -72,8 +72,14 @@
 }
 
 // トップページ(questions/index.html.erb)
+.main {
+  background: #f8f8f8;
+}
+
 .top-wrapper {
-  padding: 130px 0 100px 0;
+  width: 100vw;
+  padding: 5vh 15vw;
+  margin-top: 65px;
   background-image: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),image-url('top-img.jpg');
   background-size: cover;
 }
@@ -105,25 +111,24 @@
                -2px -2px 10px #777;
 }
 
-// ここから未編集(トップページ)
-.memory-mechanism {
-  font-size: 32px;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 24px;
+.start-btn {
+  display: inline-block;
+  padding: 12px 24px;
+  text-decoration: none;
+  border-radius: 10px;
+  color: #ffffff;
+  background-color: #ff0000;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #b60808;
+  font-size: 30px;
+  margin-top: 30px;
 }
 
-.memory-contents {
-  background-image: image-url('memory01.png');
-  width: 100vw;
-  height: 50vh;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 5vh 15vw;
+.start-btn:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: none;
 }
 
 .app-description {
@@ -135,29 +140,93 @@
   font-size: 3.5vh;
   font-weight: bold;
   margin-bottom: 5vh;
-  font-family: Helvetica, Arial, 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
 }
 
-.str1 {
+.app-description span,
+.use-app-contents .title span {
   font-weight   : bold;
   font-size     : 150%;
 }
 
 .laq-description {
-  font-family: Helvetica, Arial, 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
   font-size: 3.5vh;
   text-align: center;
 }
 
-.str2 {
-  font-weight   : bold;
-  font-size     : 150%;
-  color         : #ff0000; 
+.str {
+  background    : linear-gradient(transparent 50%, rgba(255, 0, 0, 0.49) 90%);
+  display: inline;
+  font-size: 3.5vh;
 }
 
-.laq-img {
-  width: 100vw;
-  height: 50vh;
+.red-text {
+  color: #ff0000; 
+}
+
+.use-app-contents {
+  padding: 5vh 15vw;
+}
+
+.app-description>.title,
+.use-app-contents>.title {
+  text-align: center;
+  font-size: 3.5vh;
+  font-weight: bold;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.app-description>.title::after,
+.use-app-contents>.title::after {
+  content: '';
+  width: 70px;
+  height: 4px;
+  background-color: #CC0000;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.use-app-lists {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.use-app-lists>.list {
+  width: 33vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.list {
+  margin-bottom: 30px;
+}
+
+.list-pict {
+  display: inline-block;
+  height: 250px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  box-shadow: 0 0 8px gray;
+}
+
+.use-list-text {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 50px;
+}
+
+.use-list-red-text {
+  color: #CC0000;
+}
+
+.use-list-description {
+  font-size: 18px;
+  margin-top: 10px;
 }
 
 // 新規登録画面とログイン画面(devise/registrations/new.html.erb)
@@ -448,22 +517,20 @@
   vertical-align: middle;
 }
 
-
 // モーダル
 .modal {
   background: #fff;
   width: 820px;
   padding: 20px;
   border-radius: 4px;
-  position: absolute;
+  position: fixed;
   top: 50%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  left: 50%;
   transition: transform 0.4s;
   z-index: 2;
   animation-name: fade;
   animation-duration: 0.5s;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes fade{
@@ -546,4 +613,39 @@
   right: 0;
   left: 0;
   z-index: 1;
+}
+
+// 復習日一覧
+.check-main {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+
+}
+
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table tr{
+  border-bottom: solid 1px #eee;
+  cursor: pointer;
+}
+
+table tr:hover{
+  background-color: #d4f0fd;
+}
+
+table th,table td{
+  text-align: center;
+  width: 25%;
+  padding: 15px 0;
+}
+
+table td.icon{
+  background-size: 35px;
+  background-position: left 5px center;
+  background-repeat: no-repeat;
 }
