--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -14,13 +14,13 @@
 
   <div class='app-description'>
     <h2 class='title'>
-      <span>LAQ</span>とは？
+      <span>LAQ</span>(ラク)とは？
     </h2>
     <div class="laq-description">
       <div class="str">
         <span class="red-text">L</span>et's <span class="red-text">A</span>ctive <span class="red-text">Q</span>uestion
       </div>の略称
-      <p>「積極的に問題をしよう」「楽(LAQ)に覚えられる」という意味</p>
+      <p>「積極的に問題をしよう」「楽(ラク)に覚えられる」という意味</p>
     </div>
   </div>
 
